Finalize CI workflow for style checks

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,22 +7,24 @@ on:
     branches: [main]
 
 jobs:
-  style:
+  Style:
+    name: Style
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Setup Node.js
+      - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: "20"
+          node-version: 20
 
       - name: Install dependencies
-        run: npm install --legacy-peer-deps
+        run: npm install
 
-      - name: Check code format
+      - name: Check formatting
         run: npm run format:check
 
-      - name: Run ESLint
+      - name: Run lint
         run: npm run lint
