--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,18 +7,16 @@ on:
     branches: [main]
 
 jobs:
-  Style:
-    name: Style
+  style:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Set up Node.js
+      - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 20
+          node-version: '20'
 
       - name: Install dependencies
         run: npm install
@@ -26,5 +24,5 @@ jobs:
       - name: Check formatting
         run: npm run format:check
 
-      - name: Run lint
-        run: npm run lint
+      - name: Check linting
+        run: npm run lint -- --max-warnings=0
