--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/main.js",
-    "lint": "eslint src --ext .ts,.js",
+    "lint": "eslint .",
     "format:check": "prettier --check .",
     "format:write": "prettier --write ."
   },
