--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -7,18 +7,17 @@ on:
 jobs:
   Deploy:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-      - name: Setup Node
-        uses: actions/setup-node@v4
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
         with:
-          node-version: 20
+          node-version: "20"
 
       - name: Install dependencies
         run: npm install
 
-      - name: Build app
+      - name: Build the app
         run: npm run build
