--- a/package.json
+++ b/package.json
@@ -3,20 +3,22 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
+    "start": "node dist/index.js",
     "build": "tsc",
-    "start": "node dist/main.js",
-    "dev": "ts-node src/main.ts",
+    "test": "echo \"No tests yet\" && exit 0",
     "format": "prettier --write .",
-    "format:check": "prettier --check ."
+    "format:check": "prettier --check .",
+    "lint": "eslint . --ext .ts,.js"
   },
   "dependencies": {
     "express": "^4.18.2"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
+    "@types/express": "^4.17.17",
     "typescript": "^5.2.2",
-    "ts-node": "^10.9.1",
-    "prettier": "^3.8.0",
-    "eslint": "^8.57.1"
+    "prettier": "^3.8.8",
+    "eslint": "^8.57.1",
+    "@typescript-eslint/parser": "^6.7.1",
+    "@typescript-eslint/eslint-plugin": "^6.7.1"
   }
 }
