Fix test script for GitHub Actions check

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "node dist/main.js",
     "build": "tsc",
-    "test": "node --test src/main.test.ts",
+    "test": "echo 'Running tests...' && node --test src/main.test.ts",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "lint": "eslint . --ext .ts"
