--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "node --loader ts-node/esm src/main.test.ts"
   },
   "devDependencies": {
+    "@types/express": "^5.0.6",
     "eslint": "^8.57.1",
     "prettier": "^3.8.1",
     "ts-node": "^10.9.2",
