--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/main.js",
-    "test": "echo 'npm run test' && node --no-warnings --loader ts-node/esm src/main.test.ts"
+    "test": "node -e \"console.log('npm run test')\" && node --no-warnings --loader ts-node/esm src/main.test.ts"
   },
   "devDependencies": {
     "@types/express": "^5.0.6",
