--- a/package.json
+++ b/package.json
@@ -1,20 +1,49 @@
 {
-  "name": "web-server-from-scratch",
+  "name": "learn-cicd-typescript-starter",
   "version": "1.0.0",
+  "main": "dist/main.js",
   "type": "module",
   "scripts": {
-    "build": "tsc",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:studio": "drizzle-kit studio",
+    "build": "npx tsc",
     "start": "node dist/main.js",
-    "test": "node -e \"console.log('npm run test')\" && node --no-warnings --loader ts-node/esm src/main.test.ts"
+    "dev": "npx tsc && node dist/main.js",
+    "test": "echo 'npm run test' && vitest --run",
+    "format:write": "prettier --write \"src/**/*.{js,ts,json,css,md}\"",
+    "format:check": "prettier --check \"src/**/*.{js,ts,json,css,md}\"",
+    "lint": "eslint ."
   },
   "devDependencies": {
-    "@types/express": "^5.0.6",
-    "eslint": "^8.57.1",
-    "prettier": "^3.8.1",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.9.3"
+    "@eslint/js": "^9.30.1",
+    "@types/cors": "^2.8.17",
+    "@types/eslint-plugin-security": "^3.0.0",
+    "@types/express": "^5.0.0",
+    "@types/node": "^22.9.0",
+    "drizzle-kit": "^0.28.1",
+    "eslint": "^9.39.2",
+    "eslint-plugin-security": "^3.0.1",
+    "globals": "^15.15.0",
+    "prettier": "3.8.1",
+    "tsx": "^4.19.2",
+    "typescript": "^5.6.3",
+    "typescript-eslint": "^8.54.0",
+    "vitest": "^4.0.18"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "@libsql/client": "^0.14.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "drizzle-orm": "^0.36.2",
+    "express": "^4.21.1",
+    "uuid": "^11.0.3"
+  },
+  "prettier": {
+    "printWidth": 80,
+    "useTabs": false,
+    "tabWidth": 2,
+    "semi": true,
+    "singleQuote": false
   }
 }
