Final Boot.dev compatible setup

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -2,23 +2,16 @@ name: CD
 
 on:
   push:
-    branches:
-      - main
+    branches: [main]
 
 jobs:
   Deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
+      - uses: actions/checkout@v3
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: "20"
-
-      - name: Install dependencies
-        run: npm install
-
-      - name: Build app
-        run: npm run build
+          node-version: 20
+      - run: npm install
+      - run: npm run build
