--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,19 +8,10 @@ jobs:
   Tests:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      - name: Set up Node.js
+      - uses: actions/checkout@v3
+      - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '20'
-
-      - name: Install dependencies
-        run: npm install
-
-      - name: Check formatting
-        run: npm run format:check
-
-      - name: Check linting
-        run: npm run lint -- --max-warnings=100
+          node-version: 20
+      - run: npm install
+      - run: npm run test
