--- a/package.json
+++ b/package.json
@@ -6,13 +6,20 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/main.js",
-    "test": "echo 'npm run test' && vitest run src/main.test.ts"
+    "dev": "tsc && node dist/main.js",
+    "test": "echo 'npm run test' && vitest run src/main.test.ts",
+    "format:write": "prettier --write \"src/**/*.{js,ts,json,css,md}\"",
+    "format:check": "prettier --check \"src/**/*.{js,ts,json,css,md}\"",
+    "lint": "eslint ."
   },
   "devDependencies": {
+    "@types/express": "^5.0.6",
+    "@types/node": "^22.9.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3",
-    "@types/node": "^22.9.0",
-    "vitest": "^4.0.18"
+    "vitest": "^4.0.18",
+    "eslint": "^9.39.2",
+    "prettier": "^3.8.1"
   },
   "dependencies": {
     "express": "^4.18.2"
